# mermaid-cli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
assets/: config.json  index.html  style.css
src/: exporter.rs  macros.rs  main.rs  types.rs
tests/: bench.mmd
tests/fixtures/: block_diagram.mmd  c4_diagram.mmd  class_diagram.mmd  flowchart.mmd  gantt.mmd  git_graph.mmd  packet.mmd  req_diagram.mmd  sankey.mmd  timeline.mmd
