[package]
name = "mermaid-cli-rs"
version = "0.5.0"
edition = "2021"
authors = ["0x6b"]
description = "Convert Mermaid diagram to PNG or SVG format."
license-file = "LICENSE"
build = "build.rs"

[[bin]]
name = "mmdc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
camino = { version = "1.1.9", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
headless_chrome = { version = "1.0.14", features = ["fetch"] }
mime = "0.3.17"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }

[dev-dependencies]
sha2_hasher = { git = "https://github.com/0x6b/sha2_hasher", tag = "v0.1.0" }

[profile.release]
codegen-units = 1
lto = true
strip = true
