[package]
name = "mermaid-cli-rs"
version = "0.5.5"
edition = "2024"
authors = ["0x6b"]
description = "Convert Mermaid diagram to PNG or SVG format."
license-file = "LICENSE"
build = "build.rs"

[[bin]]
name = "mmdc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
headless_chrome = { version = "1", features = ["fetch"] }
bytes = "1"
mime = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-std", "macros"] }

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }

[dev-dependencies]
sha2_hasher = { version = "0.3", features = ["async"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
opt-level = 3
